tests/machine/x/go/dataset_where_filter.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/dataset_where_filter.go:13:14: undefined: People
../../../tests/machine/x/go/dataset_where_filter.go:14:3: undefined: People
../../../tests/machine/x/go/dataset_where_filter.go:18:3: undefined: People
../../../tests/machine/x/go/dataset_where_filter.go:22:3: undefined: People
../../../tests/machine/x/go/dataset_where_filter.go:26:3: undefined: People
../../../tests/machine/x/go/dataset_where_filter.go:31:21: undefined: Adult
../../../tests/machine/x/go/dataset_where_filter.go:32:16: undefined: Adult
../../../tests/machine/x/go/dataset_where_filter.go:36:32: undefined: Adult

1: //go:build ignore
